# auto_screenshot_taker_tool

./: README.md  pyproject.toml  setup.py  upload.py
screenshot_taker/: __init__.py  main.py
take_sceenshot/: __init__.py  main.py
